...
    <string name="dialog_error_title">Ошибка</string>
    <string name="dialog_ok">Ок</string>

    <string name="error_empty">Введите число</string>
    <string name="error_not_number">Неверный ввод</string>
    <string name="error_out_of_range">Число вне допустимого диапазона</string>
    <string name="error_div_zero">Деление на ноль</string>
    <string name="error_calc_invalid">Неверное выражение</string>
    <string name="error_calc_overflow">Ошибка вычисления</string>

    <string name="content_desc_calc">Калькулятор</string>
</resources>

