<?xml version="1.0" encoding="utf-8"?>
<android.gesture.GestureOverlayView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gestures_overlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gestureColor="#FFFF00"
    android:gestureStrokeWidth="10"
    android:gestureStrokeType="multiple"
    android:eventsInterceptionEnabled="true"
    android:fadeOffset="500">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="#F0F0F0"
        tools:context=".MainActivity">

        <FrameLayout
            android:id="@+id/frameHeader"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@android:drawable/ic_menu_help"
                android:contentDescription="Icon" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frameHeader"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_to_guess"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:ems="10"
                android:inputType="number"
                android:hint="Рисуйте цифры здесь"
                android:gravity="center"/>

            <ProgressBar
                android:id="@+id/progressBarAttempts"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:progress="0"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tvAttempts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Попытки: 0/10"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onClick"
                android:text="@string/input_value" />
        </LinearLayout>

    </RelativeLayout>
</android.gesture.GestureOverlayView>
