<resources>

    <string name="app_name">Number Guess</string>
    <string name="behind">More</string>
    <string name="ahead">Lower</string>
    <string name="hit">HIT</string>
    <string name="input_value">Input value</string>
    <string name="play_more">One more?</string>
    <string name="try_to_guess">try to guess numbe from 0 to 100</string>
    <string name="error">error input</string>
    <string name="error_empty">enter the number</string>
    <string name="error_range">number need to be in range of 0 and 100</string>

    <plurals name="attempts_count">
        <item quantity="one">%1$d try from %2$d</item>
        <item quantity="few">%1$d try from %2$d</item>
        <item quantity="many">%1$d try from %2$d</item>
        <item quantity="other">%1$d try from %2$d</item>
    </plurals>
</resources>